# ProxylFit

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: changelog.md  claude_learnings.md  claude_ops.md  implementation-plan.md  index.md  installation.md  quickstart.md  session-state-2025-01-15.md  session-state-2025-01-21.md  testing-plan.md  tutorial.md  ui.md
docs/modules/: io.md  model.md  overview.md  roi_selection.md
docs/tasks/: README.md  T001-t2-t1-registration.md  T002-averaged-images.md  T003-difference-images.md  T004-running-average.md  T005-pixel-level-params.md  T006-tools-menu.md  T007-registration-progress-ui.md  T008-ui-bugfixes.md  T009-ui-refactoring.md  T010-dicom-export.md  T011-self-contained-datasets.md  T012-dicom-export-derived-images.md  T013-contour-metrics-derived-images.md  T014-parameter-map-roi-options.md  T015-application-distribution.md  T016-parameter-map-export-crashes.md  T017-parameter-map-close-exits-python.md  T018-time-axis-investigation.md  T019-difference-image-ux.md  T020-fit-results-table-export.md  (+2 more)
proxyl_analysis/: __init__.py  __main__.py  dicom_scanner.py  io.py  model.py  parameter_mapping.py  registration.py  roi_selection.py  run_analysis.py  ui.py
scripts/: capture_ui_screenshots.py  dicom_timing_diagnostic.py  integration_test.py
tasks/: T001-t2-t1-registration.md  T002-averaged-images.md  T003-difference-images.md  T004-running-average.md  T005-pixel-level-params.md
tests/: __init__.py  test_export.py  test_export_roundtrip.py  test_user_feedback_fixes.py
(+10 files in other folders)
