[project]
name = "proxylfit"
version = "1.2.0"
description = "Analysis software for time-resolved PROXYL MRI data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "SimpleITK>=2.1.0",
    "PySide6>=6.5.0",
    "pydicom>=2.3.0",
]

[project.optional-dependencies]
segment = [
    "segment-anything",
    "opencv-python",
]

[project.scripts]
proxylfit = "proxyl_analysis.__main__:main"
